# bashair

./: .dockerignore  .gitignore  Dockerfile  DockerfileGdal  LICENSE  Makefile  Pipfile  README.md  config.py  dev.yml  docker-compose.yml  env_example  main.py  matrix.yml  notion.yml  pyproject.toml  setup.cfg
back/: admin.py  apps.py  forms.py  main.py  router.py  views.py
back/adapters/: __init__.py  base.py  sensors.py
back/admin/: __init__.py  base.py  city.py  community.py  factory.py  sensor.py  signal.py  user.py
back/api/: auth.py  city.py  community.py  factory.py  geo.py  instance.py  nmu.py  node.py  nodes.py  notify.py  ping.py  sensors.py  signal.py  weather.py
back/depends/: user.py
back/measurements/: base.py
back/migrations/: 0001_initial.py  0002_auto_20210328_0302.py  0003_auto_20220212_0228.py  0004_auto_20220212_0352.py  0005_auto_20220212_0353.py  0006_factory_factorytype.py  0007_auto_20220212_0431.py  0008_auto_20220212_0433.py  0009_auto_20220212_0438.py  0010_auto_20220212_0441.py  0011_alter_instance_phone.py  0012_remove_factory_phone.py  0013_factory_phone.py  0014_community.py  0015_community_phone.py  0016_remove_node_email.py  0017_auto_20220213_0440.py  0018_auto_20220213_0447.py  0019_factory_factory_type.py  0020_factory_point.py  0021_remove_factory_location.py  0022_rename_point_factory_location.py  0023_auto_20220219_0225.py  0024_factory_polygon.py  0025_auto_20220219_0330.py  0026_auto_20220219_0447.py  0027_auto_20220219_0518.py  0028_member.py  0029_city_point_alter_node_name.py
back/models/: base.py  city.py  community.py  deny_list.py  factory.py  instance.py  nmu.py  node.py  sensors.py  signal.py  token.py  user.py
back/routers/: __init__.py  ping.py  sensors.py
back/schemas/: base.py  city.py  community.py  factory.py  influx.py  instance.py  location.py  nmu.py  node.py  sensors.py  signal.py  token.py  user.py
back/schemas/forms/: procuratura.py
back/static/: L.ArrowCircle.js  charts.js  heatmap.js  map.css  map.js  quake.js
back/tasks/: parse_bash_nmu.py  send_to_proc.py
back/tasks/docs/: procuratura.txt
back/templates/: map.html  simple.html
back/templates/admin/: change_form.html
back/tests/: simple.py  test_influx_air.py
back/tests/api/: test_city.py  test_community.py  test_instance.py  test_nmu.py  test_node.py  test_send_measurement.py  test_signal.py
back/tests/api/data/: measurement_bad.json
back/time_series/: air.py  base.py
back/utils/: exceptions.py
backup/fixtures/: django.json
backup/madavi/: import_all.py  import_csv.py
bots/: telega.py
compose/grafana/: config.ini
compose/nginx/: api.conf  api2.conf  app.conf  panel.conf
compose/postgres/: Dockerfile  DockerfileGis  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
config/: asgi.py  auth.py  base.py  envs.py  influx.py  mongo.py  owm.py  settings.py  urls.py  wsgi.py
db/: influx.py  mongo.py  mongo_async.py
db/schemas/: influx_warning.py  sensor_measurement.py
front/landing/: bashair.toml  custom-script.js
front/landing/static/: otkrytoe_pismo_2020.docx
front/signal-map/: .gitignore  README.md  package.json
front/signal-map/src/: App.vue  main.js  router.js  store.js
tests/: measurement.json  simple.py  test_api.py  test_api_measurement.py  test_api_warning.py  warning.json
tests/data/: measurement.json
zapros/: proc.ipynb
(+5 files in other folders)
