[tool.poetry]
name = "bashair"
version = "0.1.0"
description = "BashAir.ru"
authors = ["Rustam Salavatov <info@3dstr.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
uvicorn = "^0.11.8"
whitenoise = "^5.2.0"
fastapi = "^0.63.0"
aiogram = "^2.12.1"
python-aqi = "^0.6.1"
pydantic = {extras = ["dotenv"], version = "^1.8.1"}
influxdb-client = "^1.15.0"
django-extensions = "^3.1.1"
requests = "^2.25.1"
sentry-sdk = "^1.0.0"
psycopg2-binary = "^2.9.3"
django-cities-light = "^3.9.0"
django-phonenumber-field = "^6.0.0"
phonenumbers = "^8.12.43"
pyowm = "^3.2.0"
fastapi-jwt-auth = "^0.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
Pillow = "^9.0.1"
python-multipart = "^0.0.5"
beautifulsoup4 = "^4.10.0"



[tool.poetry.dev-dependencies]
# black = "^21.7b0"
# django-stubs = {git = "https://github.com/typeddjango/django-stubs.git"}
# flake8 = "^3.9.2"
# mypy = "^0.910"
pytest = "^6.2.2"
# pandas = "^1.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
